--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <!-- Icon -->
+    <link rel="shortcut icon" href="{{url_for('static', filename='img/icon.ico')}}">
+    
+    <title>TOC Generator</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
