--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,37 @@
     <title>TOC Generator</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+      <div class="row align-items-start">
+        <div class="col">
+          <form>
+            <div class="mb-3">
+              <label for="textarea1" class="form-label">Markdown text</label>
+              <textarea class="form-control" id="textarea1" value=""></textarea>
+            </div>
+            <div class="input-group mb-3">
+              <div class="form-file">
+                <input type="file" class="form-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
+                <label class="form-file-label" for="inputGroupFile04">
+                  <span class="form-file-text">Choose file...</span>
+                  <span class="form-file-button">Browse</span>
+                </label>
+              </div>
+              <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <div class="col">
+          <form>
+            <div class="mb-3">
+              <label for="textarea2" class="form-label">Result</label>
+              <textarea class="form-control" id="textarea2" readonly placeholder="dadas"></textarea>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- Popper.js first, then Bootstrap JS -->
