--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
           <form>
             <div class="mb-3">
               <label for="textarea2" class="form-label">Result</label>
-              <textarea class="form-control" id="textarea2" rows="{{rows}}" readonly placeholder="{% if result %}{{result}}{% endif %}"></textarea>
+              <textarea class="form-control" id="textarea2" rows="{{rows}}" placeholder="Table of contents">{% if result %}{{result}}{% endif %}</textarea>
             </div>
           </form>
         </div>
