--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <form method="POST" action=".">
             <div class="mb-3">
               <label for="textarea1" class="form-label">Markdown text</label>
-              <textarea class="form-control" rows="{{rows}}" id="textarea1" name="text" placeholder="Type your markdown here"></textarea>
+              <textarea class="form-control" rows="{{rows}}" id="textarea1" name="text" placeholder="Type your markdown here">{% if input %}{{input}}{% endif %}</textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
