--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <div class="row align-items-start">
         <div class="col">
-          <form method="POST" action=".">
+          <form method="POST" action="/text">
             <div class="mb-3">
               <label for="textarea1" class="form-label">Markdown text</label>
               <textarea class="form-control" rows="{{rows}}" id="textarea1" name="text" placeholder="Type your markdown here">{% if input %}{{input}}{% endif %}</textarea>
