--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,14 @@
               <label for="textarea1" class="form-label">Markdown text</label>
               <textarea class="form-control" rows="{{rows}}" id="textarea1" name="text" placeholder="Type your markdown here">{% if input %}{{input}}{% endif %}</textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Send text</button>
+          </form>
+          <form method="POST" action="/file" enctype="multipart/form-data">
+            <div class="mb-3">
+              <label for="file" class="form-label">Markdown file</label>
+              <input type="file" name="file" id="file">
+            </div>
+            <button type="submit" class="btn btn-primary mb-3">Send file</button>
           </form>
         </div>
         <div class="col">
