--- a/templates/index.html
+++ b/templates/index.html
@@ -23,12 +23,17 @@
             </div>
             <button type="submit" class="btn btn-primary">Send text</button>
           </form>
-          <form method="POST" action="/file" enctype="multipart/form-data">
-            <div class="mb-3">
-              <label for="file" class="form-label">Markdown file</label>
-              <input type="file" name="file" id="file">
+          <form method="POST" action="/file" enctype="multipart/form-data" class="mt-3">
+            <div class="input-group mb-3">
+              <button class="btn btn-outline-secondary" type="submit" id="inputGroupFileAddon03">Button</button>
+              <div class="form-file">
+                <input type="file" class="form-file-input" name="file" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03">
+                <label class="form-file-label" for="inputGroupFile03">
+                  <span class="form-file-text">Choose file...</span>
+                  <span class="form-file-button">Browse</span>
+                </label>
+              </div>
             </div>
-            <button type="submit" class="btn btn-primary mb-3">Send file</button>
           </form>
         </div>
         <div class="col">
