--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
           <form method="POST" action="/file" enctype="multipart/form-data" class="mt-3">
             <div class="mb-3">
               <label for="file" class="form-label">Markdown files</label>
-              <input type="file" name="file" id="file" multiple>
+              <input type="file" name="files" id="files" multiple>
             </div>
             <button type="submit" class="btn btn-primary mb-3">Send file</button>
           </form>
