--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,7 +3,6 @@
       <p class="float-right mb-1">
         <a href="#">Back to top</a>
       </p>
-      <p class="mb-1">Album example is © Bootstrap, but please download and customize it for yourself!</p>
-      <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.0/getting-started/introduction/">getting started guide</a>.</p>
+      <p class="mb-0">New to Table of Contents? Visit the <a href="https://github.com/mezgoodle/TOC-generator" target="_blank">homepage</a> of this project or watch this <a href="https://gist.github.com/jonschlinkert/ac5d8122bfaaa394f896" target="_blank">gist</a>.</p>
     </div>
 </footer>
